--- a/templates/app.html
+++ b/templates/app.html
@@ -1,9 +1,24 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">    
         <title>Math Word Problem Solver</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     </head>
-    <body>
-        <h1><center>Hello World!</center></h1>
+   
+    <body class="bg-light">
+        <div>
+            <header class="d-flex justify-content-center py-3 fs-2 bg-body-secondary shadow-sm">
+                 Math Word Problem Solver    
+            </header>
+        </div>
+        <div class="bg-info rounded mx-auto mt-5 p-3 shadow-lg" style="width: 550px;">
+            <form action="">
+                <label for="input">Enter Question:</label><br>
+                <input type="text">
+            </form>
+        </div>
     </body>
 </html>
+
