--- a/templates/app.html
+++ b/templates/app.html
@@ -9,15 +9,22 @@
    
     <body class="bg-light">
         <div>
-            <header class="d-flex justify-content-center py-3 fs-2 bg-body-secondary shadow-sm">
+            <header class="d-flex justify-content-center py-3 fs-2 bg-body-secondary shadow-sm rounded-bottom">
                  Math Word Problem Solver    
             </header>
         </div>
-        <div class="bg-info rounded mx-auto mt-5 p-3 shadow-lg" style="width: 550px;">
-            <form action="">
-                <label for="input">Enter Question:</label><br>
-                <input type="text">
+        <div class="mx-auto" style="width: 750px; border-radius: 20px;">
+            <form action= "{{ url_for('api') }}" method="post" class="bg-body-secondary shadow-lg mx-auto mt-5 p-3" style="border-radius: 20px;">
+                <div class ='form-group p-1'>
+                    <label for="input" class="mt-2 mb-2">Enter Question:</label>
+                    <input rows = 5 size="46px" class="form-control mb-3" id="input" name="input" value="">
+                </div>
+                <div class ='form-group p-1'>
+                    <label for="ouput" class="mt-2 mb-2">Output:</label>
+                    <textarea rows = 3 size="46px" class="form-control mb-3" id="ouput" readonly>{{output}}</textarea>
+                </div>
             </form>
+            <span class="p-3" style="font-size: small; color:blue;"><u>See preprocessing output</u></span>
         </div>
     </body>
 </html>
