--- a/templates/app.html
+++ b/templates/app.html
@@ -14,7 +14,7 @@
             </header>
         </div>
         <div class="mx-auto" style="width: 750px; border-radius: 20px;">
-            <form action= "{{ url_for('api') }}" method="post" class="bg-body-secondary shadow-lg mx-auto mt-5 p-3" style="border-radius: 20px;">
+            <form method="post" class="bg-body-secondary shadow-lg mx-auto mt-5 p-3" style="border-radius: 20px;">
                 <div class ='form-group p-1'>
                     <label for="input" class="mt-2 mb-2">Enter Question:</label>
                     <input rows = 5 size="46px" class="form-control mb-3" id="input" name="input" value="">
