--- a/templates/app.html
+++ b/templates/app.html
@@ -17,11 +17,12 @@
             <form method="post" class="bg-body-secondary shadow-lg mx-auto mt-5 p-3" style="border-radius: 20px;">
                 <div class ='form-group p-1'>
                     <label for="input" class="mt-2 mb-2">Enter Question:</label>
-                    <input rows = 5 size="46px" class="form-control mb-3" id="input" name="input" value="">
+                    <textarea rows = 5 size="46px" class="form-control mb-3" id="input" name="input" style= "resize: none;"></textarea>
+                    <input type='submit' value='submit' class="btn btn-primary">
                 </div>
                 <div class ='form-group p-1'>
                     <label for="ouput" class="mt-2 mb-2">Output:</label>
-                    <textarea rows = 3 size="46px" class="form-control mb-3" id="ouput" readonly>{{output}}</textarea>
+                    <textarea rows = 3 size="46px" class="form-control mb-3" id="ouput" style= "resize: none;" readonly>{{output}}</textarea>
                 </div>
             </form>
             <span class="p-3" style="font-size: small; color:blue;"><u>See preprocessing output</u></span>
