made preprocessing page and methods

--- a/templates/app.html
+++ b/templates/app.html
@@ -25,7 +25,7 @@
                     <textarea rows = 3 size="46px" class="form-control mb-3" id="ouput" style= "resize: none;" readonly>{{output}}</textarea>
                 </div>
             </form>
-            <span class="p-3" style="font-size: small; color:blue;"><u>See preprocessing output</u></span>
+            <span class="p-3" style="font-size: small; color:blue;"><a href="{{ url_for('api') }}">See preprocessing output</a></span>
         </div>
     </body>
 </html>
