--- a/templates/app.html
+++ b/templates/app.html
@@ -17,7 +17,7 @@
             <form method="post" class="bg-body-secondary shadow-lg mx-auto mt-5 p-3" style="border-radius: 20px;">
                 <div class ='form-group p-1'>
                     <label for="input" class="mt-2 mb-2">Enter Question:</label>
-                    <textarea rows = 5 size="46px" class="form-control mb-3" id="input" name="input" style= "resize: none;"></textarea>
+                    <textarea rows = 5 size="46px" class="form-control mb-3" id="input" name="input" style= "resize: none;">{{ input }}</textarea>
                     <input type='submit' value='submit' class="btn btn-primary">
                 </div>
                 <div class ='form-group p-1'>
