complete the project

--- a/templates/api.html
+++ b/templates/api.html
@@ -4,13 +4,17 @@
         <title>preprocessing output</title>
     </head>
     <body>
-        <h3>The output after _____ is:</h3>
-        <p>{{out1}}</p>
-        <br>
-        <h3>The output after _____ is:</h3>
-        <p>{{out2}}</p>
-        <br>
-        <h3>The output after _____ is:</h3>
-        <p>{{out3}}</p>
+        <h3>The output after removing punctuation is:</h3>
+        <p>{{o1}}</p>
+        <h3>The output after stopword removal is:</h3>
+        <p>{{o2}}</p>
+        <h3>The output after lemmatization is:</h3>
+        <p>{{o3}}</p>
+        <h3>The output after label selective tagging is:</h3>
+        <p>{{o4}}</p>
+        <h3>The output after pos tagging is:</h3>
+        <p>{{o5}}</p>
+        <h3>The output after positional encoding is:</h3>
+        <p>{{o6}}</p>
     </body>
 </html>
