--- a/templates/app.html
+++ b/templates/app.html
@@ -22,7 +22,7 @@
                 </div>
                 <div class ='form-group p-1'>
                     <label for="ouput" class="mt-2 mb-2">Output:</label>
-                    <textarea rows = 3 size="46px" class="form-control mb-3" id="ouput" style= "resize: none;" readonly>{{output}}</textarea>
+                    <textarea rows = 3 size="46px" class="form-control mb-3" id="ouput" style= "resize: none;color:{{color}};" readonly>{{output}}</textarea>
                 </div>
             </form>
             <span class="p-3" style="font-size: small; color:blue;"><a href="{{ url_for('api') }}">See preprocessing output</a></span>
